# geodesic2

./: CMakeLists.txt  README.md  profile.yaml
py/: build_image.py  geodesic_rt.py  kruskal.py  lemaitre.py  schwarzschild.cl  schwarzschild.py
py/metrics/: common.py  kruskal.cl  kruskal.py  lemaitre.py  schwarzschild.cl  schwarzschild.py
py/metrics/cl/: kruskal.cl  lemaitre.cl
src/: calc.c  calc.h  config.h  dispatcher.c  dispatcher.h  geodesic.c  geodesic.cl  opencl.c  opencl.h
src/mathtest/: euler.c
